// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Selectbox component renders correctly 1`] = `
<div
  className="asdfasdf"
>
  <select
    Value="hi"
    aria-label=""
    className="select__input"
    data-locator=""
    disabled={false}
    id="abcd"
    name=""
    type="text"
    value="hello"
  >
    <option
      id="US"
      key="US"
      value="US"
    >
      United States
    </option>
    <option
      id="CA"
      key="CA"
      value="CA"
    >
      Canada
    </option>
  </select>
  <Styled(BodyCopy)
    className="select__label"
    color="text.primary"
    component="p"
    fontFamily="secondary"
    fontSize="fs12"
    fontWeight="regular"
    letterSpacing="normal"
    lineHeight="normal"
    textAlign="left"
  >
    placeholder
  </Styled(BodyCopy)>
  <div
    className="SelectBox__error"
  >
    <div
      aria-disabled="true"
      className=""
    />
  </div>
</div>
`;

exports[`Selectbox component renders correctly with disabled props 1`] = `
<div
  className="asdfasdf"
>
  <select
    Value="hi"
    aria-label=""
    className="select__input"
    data-locator=""
    disabled={true}
    id="abcd"
    name=""
    type="text"
    value="hello"
  >
    <option
      id="US"
      key="US"
      value="US"
    >
      United States
    </option>
    <option
      id="CA"
      key="CA"
      value="CA"
    >
      Canada
    </option>
  </select>
  <Styled(BodyCopy)
    className="select__label"
    color="text.primary"
    component="p"
    fontFamily="secondary"
    fontSize="fs12"
    fontWeight="regular"
    letterSpacing="normal"
    lineHeight="normal"
    textAlign="left"
  >
    placeholder
  </Styled(BodyCopy)>
  <div
    className="SelectBox__error"
  >
    <div
      aria-disabled="true"
      className=""
    />
  </div>
</div>
`;

exports[`Selectbox component renders correctly with touched and error 1`] = `
<div
  className="asdfasdf"
>
  <select
    aria-label=""
    className="select__input"
    data-locator=""
    defaultValue="United States"
    disabled={false}
    id="abcd"
    name=""
    type="text"
    value="some string @@LABEL@@"
  >
    <option
      value=""
    >
      first name for user
    </option>
    <option
      id="US"
      key="US"
      value="US"
    >
      United States
    </option>
    <option
      id="CA"
      key="CA"
      value="CA"
    >
      Canada
    </option>
  </select>
  <Styled(BodyCopy)
    className="select__label"
    color="text.primary"
    component="p"
    fontFamily="secondary"
    fontSize="fs12"
    fontWeight="regular"
    letterSpacing="normal"
    lineHeight="normal"
    textAlign="left"
  >
    first name for user
  </Styled(BodyCopy)>
  <div
    className="SelectBox__error"
  >
    <div
      aria-disabled="true"
      className="warning-icon"
    />
    <Styled(BodyCopy)
      aria-live="assertive"
      className={null}
      color="error"
      component="div"
      fontFamily="secondary"
      fontSize="fs12"
      fontWeight="extrabold"
      letterSpacing="normal"
      lineHeight="normal"
      role="alert"
      textAlign="left"
    >
      REQUIRED_FIELD
    </Styled(BodyCopy)>
  </div>
</div>
`;

exports[`Selectbox component renders correctly with touched and warning 1`] = `
<div
  className="asdfasdf"
>
  <select
    aria-label=""
    className="select__input"
    data-locator=""
    defaultValue="United States"
    disabled={false}
    id="abcd"
    name=""
    type="text"
    value=""
  >
    <option
      id="US"
      key="US"
      value="US"
    >
      United States
    </option>
    <option
      id="CA"
      key="CA"
      value="CA"
    >
      Canada
    </option>
  </select>
  <Styled(BodyCopy)
    className="select__label"
    color="text.primary"
    component="p"
    fontFamily="secondary"
    fontSize="fs12"
    fontWeight="regular"
    letterSpacing="normal"
    lineHeight="normal"
    textAlign="left"
  />
  <div
    className="SelectBox__error"
  >
    <div
      aria-disabled="true"
      className=""
    />
  </div>
</div>
`;
